--- a/juego.html
+++ b/juego.html
@@ -3,14 +3,14 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     </head>
     <body>
 
         <header class="header">
             <div class="logo">
-                <img src="../img/logotp.jpg" alt="Gaming Store Logo" class="logo-image">
+                <img src="img/logotp.jpg" alt="Gaming Store Logo" class="logo-image">
             </div>
             
             <div class="contenedor-busqueda">
@@ -364,6 +364,6 @@
             </div>
         </div>
     </footer>
-    <script src="../js/javaScript.js"></script>
+    <script src="js/javaScript.js"></script>
     </body>
 </html>
