--- a/juego.html
+++ b/juego.html
@@ -10,7 +10,9 @@
 
         <header class="header">
             <div class="logo">
-                <img src="img/logotp.jpg" alt="Gaming Store Logo" class="logo-image">
+                <a href="Home.html">
+                    <img src="img/logopagina.jpg" alt="Gaming Store Logo" class="logo-image">
+                </a>
             </div>
             
             <div class="contenedor-busqueda">
