Agregado cantidad de subimagen y nuevas imagenes jugables

--- a/juego.html
+++ b/juego.html
@@ -137,6 +137,16 @@
                             <i class="fas fa-puzzle-piece blocka-icon"></i>
                             <h3>¡Bienvenido a BLOCKA!</h3>
                             <p>Rota las piezas hasta formar la imagen completa</p>
+                            
+                            <!-- Selector de dificultad -->
+                            <div class="blocka-difficulty">
+                                <label for="pieces-selector">Número de piezas:</label>
+                                <select id="pieces-selector">
+                                    <option value="4">4 piezas (2x2) - Fácil</option>
+                                    <option value="6">6 piezas (2x3) - Medio</option>
+                                    <option value="8">8 piezas (2x4) - Difícil</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
 
