agregado hover en juegos recomendados

--- a/juego.html
+++ b/juego.html
@@ -305,10 +305,8 @@
             <div class="comunidad">
                 <div class="comentar">
                     <img src="img/usuario.png" alt="usuario">
-                    <div class="inputComentar">
-                        <p>Agrega un comentario...</p>
-                    </div>
-                    <img src="img/subir comentario.png" alt="boton comentar">
+                    <input type="text" placeholder="Agregar un comentario..." class="input-comentario">
+                    <img src="img/subir comentario.png" alt="boton comentar" class="boton-subir-comentario">
                 </div>
                 <div class="comentarios">
                     <div class="comentario">
@@ -340,16 +338,40 @@
             
             <div class="recomendados">
                 <h2>Recomendados</h2>
-                <div class="card">
-                    <img src="img/recomendado.png" alt="juego recomendado">
-                </div>
-                <div class="card">
-                    <img src="img/recomendado.png" alt="juego recomendado">
-                </div>
-                <div class="card">
-                    <img src="img/recomendado.png" alt="juego recomendado">
-                </div>
+                <div class="card-recomendado">
+                    <img src="img/katana zero.jpg" alt="Katana Zero">
+                    <div class="card-hover-info">
+                        <img src="img/katana zero.jpg" alt="Katana Zero" class="hover-image">
+                        <div class="hover-content">
+                            <h3>Katana Zero</h3>
+                            <p class="hover-genre">Acción</p>
+                            <p class="hover-description">Un juego de acción y plataformas con combate de espadas, manipulación del tiempo y muerte instantánea. Combina narrativa cinematográfica con gameplay frenético.</p>
+                        </div>
                     </div>
+                </div>
+                <div class="card-recomendado">
+                    <img src="img/inscryption.jpg" alt="Inscryption">
+                    <div class="card-hover-info">
+                        <img src="img/inscryption.jpg" alt="Inscryption" class="hover-image">
+                        <div class="hover-content">
+                            <h3>Inscryption</h3>
+                            <p class="hover-genre">Horror/Puzzle</p>
+                            <p class="hover-description">Un misterioso juego de cartas que combina escape room, horror psicológico y narrativa meta. Cada partida revela secretos más profundos.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-recomendado">
+                    <img src="img/ror2.jpg" alt="Risk of Rain 2">
+                    <div class="card-hover-info">
+                        <img src="img/ror2.jpg" alt="Risk of Rain 2" class="hover-image">
+                        <div class="hover-content">
+                            <h3>Risk of Rain 2</h3>
+                            <p class="hover-genre">Roguelike</p>
+                            <p class="hover-description">Un roguelike multijugador en 3D donde combates hordas de enemigos en planetas alienígenas. Cada run es único con objetos y habilidades aleatorias.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </main>
         </div>
 
