solucionado error con imagenes del blocka

--- a/Home.html
+++ b/Home.html
@@ -185,8 +185,8 @@
                                 </div>
                             </a>
                         </div>
-                        <h3>UNCHARTED 4</h3>
-                        <p>Aventura</p>
+                        <h3>BLOCKA</h3>
+                        <p>Rompecabezas</p>
                         <div class="game-price">$29.99</div>
                     </div>
                     <div class="game-card">
