--- a/juego.html
+++ b/juego.html
@@ -11,7 +11,7 @@
         <header class="header">
             <div class="logo">
                 <a href="Home.html">
-                    <img src="img/logopagina.jpg" alt="Gaming Store Logo" class="logo-image">
+                    <img src="./img/logopagina.jpg" alt="Gaming Store Logo" class="logo-image">
                 </a>
             </div>
             
@@ -304,27 +304,27 @@
                 <div class="container-lateral">
             <div class="comunidad">
                 <div class="comentar">
-                    <img src="img/usuario.png" alt="usuario">
+                    <img src="./img/usuario.png" alt="usuario">
                     <input type="text" placeholder="Agregar un comentario..." class="input-comentario">
-                    <img src="img/subir comentario.png" alt="boton comentar" class="boton-subir-comentario">
+                    <img src="./img/subir comentario.png" alt="boton comentar" class="boton-subir-comentario">
                 </div>
                 <div class="comentarios">
                     <div class="comentario">
-                        <img src="img/usuario.png" alt="usuario">
+                        <img src="./img/usuario.png" alt="usuario">
                         <div class="contenido-comentario">
                             <h2>SpearMaster84</h2>
                             <p>Divertido ver a Magikarp saltando de un lugar a otro, aunque se vuelve un poco repetitivo.</p>
                         </div>
                     </div>
                     <div class="comentario">
-                        <img src="img/usuario.png" alt="usuario">
+                        <img src="./img/usuario.png" alt="usuario">
                         <div class="contenido-comentario">
                             <h2>Knight210</h2>
                             <p>Es un juego sencillo, pero entretiene lo suficiente para pasar unos minutos relajado con Magikarp.</p>
                         </div>
                     </div>
                     <div class="comentario">
-                        <img src="img/usuario.png" alt="usuario">
+                        <img src="./img/usuario.png" alt="usuario">
                         <div class="contenido-comentario">
                             <h2>TheKimball</h2>
                             <div class="texto-comentario">
@@ -339,9 +339,9 @@
             <div class="recomendados">
                 <h2>Recomendados</h2>
                 <div class="card-recomendado">
-                    <img src="img/katana zero.jpg" alt="Katana Zero">
+                    <img src="./img/katana zero.jpg" alt="Katana Zero">
                     <div class="card-hover-info">
-                        <img src="img/katana zero.jpg" alt="Katana Zero" class="hover-image">
+                        <img src="./img/katana zero.jpg" alt="Katana Zero" class="hover-image">
                         <div class="hover-content">
                             <h3>Katana Zero</h3>
                             <p class="hover-genre">Acción</p>
@@ -350,9 +350,9 @@
                     </div>
                 </div>
                 <div class="card-recomendado">
-                    <img src="img/inscryption.jpg" alt="Inscryption">
+                    <img src="./img/inscryption.jpg" alt="Inscryption">
                     <div class="card-hover-info">
-                        <img src="img/inscryption.jpg" alt="Inscryption" class="hover-image">
+                        <img src="./img/inscryption.jpg" alt="Inscryption" class="hover-image">
                         <div class="hover-content">
                             <h3>Inscryption</h3>
                             <p class="hover-genre">Horror/Puzzle</p>
@@ -361,9 +361,9 @@
                     </div>
                 </div>
                 <div class="card-recomendado">
-                    <img src="img/ror2.jpg" alt="Risk of Rain 2">
+                    <img src="./img/ror2.jpg" alt="Risk of Rain 2">
                     <div class="card-hover-info">
-                        <img src="img/ror2.jpg" alt="Risk of Rain 2" class="hover-image">
+                        <img src="./img/ror2.jpg" alt="Risk of Rain 2" class="hover-image">
                         <div class="hover-content">
                             <h3>Risk of Rain 2</h3>
                             <p class="hover-genre">Roguelike</p>
