cambiado titulo de card a blocka

--- a/Home.html
+++ b/Home.html
@@ -185,7 +185,7 @@
                                 </div>
                             </a>
                         </div>
-                        <h3>BLOCKA</h3>
+                        <h3>Blocka</h3>
                         <p>Rompecabezas</p>
                         <div class="game-price">$29.99</div>
                     </div>
